figure ordering changed

--- a/article-exhibits.ipynb
+++ b/article-exhibits.ipynb
@@ -541,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Figure 2\n",
+    "## Figure 1\n",
     "\n",
     "Distribution of the ASE proportions by the diet classification (grouping based on the food records and background questionnaires). Participants' dietary classification is indicated with color coding, with green for vegan, orange for vegetarian and blue for omnivore group. The vegetarian group included lactovegetarians, lacto-ovo-vegetarians and pescovegetarians."
    ]
@@ -576,7 +576,7 @@
     "for ax in fg.axes.flat:\n",
     "   ax.set_xlim([0, ax.get_xlim()[1]])\n",
     "\n",
-    "save_fig_files(2)\n",
+    "save_fig_files(1)\n",
     "plt.show()\n",
     "plt.close()"
    ]
@@ -724,7 +724,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Figure 3"
+    "# Supplementary Figure 5"
    ]
   },
   {
@@ -778,7 +778,7 @@
     "\n",
     "fg.legend.set_title(None)\n",
     "\n",
-    "save_fig_files(3)\n",
+    "save_fig_files(5)\n",
     "plt.show()\n",
     "plt.close()"
    ]
@@ -893,7 +893,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Figure 4"
+    "# Figure 2"
    ]
   },
   {
@@ -923,7 +923,7 @@
     "\n",
     "plt.tight_layout(w_pad=-6, h_pad=2)\n",
     "\n",
-    "save_fig_files(4)\n",
+    "save_fig_files(2)\n",
     "\n",
     "plt.show()\n",
     "plt.close()"
@@ -933,7 +933,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Figure 5"
+    "# Figure 3"
    ]
   },
   {
@@ -960,7 +960,7 @@
     "\n",
     "plt.tight_layout(w_pad=5, h_pad=0)\n",
     "\n",
-    "save_fig_files(5)\n",
+    "save_fig_files(3)\n",
     "\n",
     "plt.show()\n",
     "plt.close()"
