writing a data file for review per figure

--- a/article-exhibits.ipynb
+++ b/article-exhibits.ipynb
@@ -577,6 +577,8 @@
     "   ax.set_xlim([0, ax.get_xlim()[1]])\n",
     "\n",
     "save_fig_files(1)\n",
+    "subjects_fr[[pct_animal,diet_class]].to_csv('out/Fig1_data.csv', index=False)\n",
+    "\n",
     "plt.show()\n",
     "plt.close()"
    ]
@@ -779,6 +781,8 @@
     "fg.legend.set_title(None)\n",
     "\n",
     "save_fig_files(5)\n",
+    "asep_by_day[['asep_sd',diet_class]].to_csv('out/Fig5_data.csv', index=False)\n",
+    "\n",
     "plt.show()\n",
     "plt.close()"
    ]
@@ -924,6 +928,7 @@
     "plt.tight_layout(w_pad=-6, h_pad=2)\n",
     "\n",
     "save_fig_files(2)\n",
+    "subjects_fr[[pct_animal,diet_class]+list(ys.keys())].to_csv('out/Fig2_data.csv', index=False)\n",
     "\n",
     "plt.show()\n",
     "plt.close()"
@@ -961,27 +966,10 @@
     "plt.tight_layout(w_pad=5, h_pad=0)\n",
     "\n",
     "save_fig_files(3)\n",
+    "df[[pct_animal,diet_class]+list(ys.keys())].to_csv('out/Fig3_data.csv', index=False)\n",
     "\n",
     "plt.show()\n",
     "plt.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Readable versions of source data\n",
-    "Write excel files to /out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subjects_all.to_excel('out/subjects_all.xlsx')\n",
-    "food_records.to_excel('out/food_records.xlsx')"
    ]
   }
  ],
