--- a/article-exhibits.ipynb
+++ b/article-exhibits.ipynb
@@ -48,12 +48,17 @@
    "outputs": [],
    "source": [
     "# Data files are exactly as received from MIRA Helsinki Study. This code does not write to these files.\n",
-    "data_master = 'data/mira/MIRA Master file 180527.sav'\n",
-    "data_lab = 'data/mira/HUSLAB Data final_WithMixedVegans.txt'\n",
-    "data_intakes = 'data/mira/muuttujat_analyysiin.txt'\n",
-    "data_thl = 'data/mira/growth-curves.tsv'\n",
-    "data_questionnaire = 'data/mira/data huoltajan tausta 171106.sav'\n",
-    "data_food_record = 'data/mira/radata.txt'"
+    "from local_config import mira_data_folder\n",
+    "\n",
+    "data_master = f'{mira_data_folder}/MIRA Master file 180527.sav'\n",
+    "data_lab = f'{mira_data_folder}/HUSLAB Data final_WithMixedVegans.txt'\n",
+    "data_intakes = f'{mira_data_folder}/muuttujat_analyysiin.txt'\n",
+    "data_thl = f'{mira_data_folder}/growth-curves.tsv'\n",
+    "data_questionnaire = f'{mira_data_folder}/data huoltajan tausta 171106.sav'\n",
+    "data_food_record = f'{mira_data_folder}/radata.txt'\n",
+    "data_anthro_patch = f'{mira_data_folder}/anthro_measures.csv'\n",
+    "data_daymatrix = f'{mira_data_folder}/asep_daymatrix.csv'\n",
+    "data_metabolites = f'{mira_data_folder}/metabolites.csv'"
    ]
   },
   {
@@ -94,7 +99,7 @@
    "source": [
     "# Some participant's age at time of anthropometric measurements was not available in the datafile containing laboratory test results.\n",
     "df_anthro_patch = pd.read_csv(\n",
-    "    'data/mira/anthro_measures.csv',\n",
+    "    data_anthro_patch,\n",
     "    index_col='ID'\n",
     ")\n",
     "subjects_all = subjects_all.combine_first(df_anthro_patch)"
@@ -736,7 +741,7 @@
    "outputs": [],
    "source": [
     "asep_by_day = pd.read_csv(\n",
-    "    'data/mira/asep_daymatrix.csv',\n",
+    "    data_daymatrix,\n",
     "    usecols=['group','asep_sd']\n",
     "    \n",
     ")#this data calculated from food records elsewhere, in R\n",
@@ -948,7 +953,7 @@
    "outputs": [],
    "source": [
     "metabolites = pd.read_csv(\n",
-    "    'data/mira/metabolites.csv',\n",
+    "    data_metabolites,\n",
     "    index_col='id'\n",
     ")\n",
     "df = subjects_fr.join(metabolites)\n",
@@ -975,7 +980,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -989,7 +994,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
