added note about sex coding

--- a/article-exhibits.ipynb
+++ b/article-exhibits.ipynb
@@ -628,7 +628,7 @@
    "source": [
     "def summarize(name, df):\n",
     "    count_diet_classes = df[diet_class].value_counts().to_frame()\n",
-    "    count_sexes = df.sukupuoli.value_counts().to_frame()\n",
+    "    count_sexes = df.sukupuoli.value_counts().to_frame() #1==female, 2==male\n",
     "    count_bmi_class = df.bmi_class.value_counts().to_frame()\n",
     "    desc_intakes = df[['age_at_first_food_record','bmi_sds']+variables_of_interest].describe().transpose()[['50%','min','max']]\n",
     "    \n",
